Add authentication and update swagger
